crates/aranya-policy-compiler/tests/data/type_errors/substruct_non_struct_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: bool
  |
5 |     let new_struct = x substruct Baz
  |                      ^ expected `struct T` but found `bool`
